--- a/tests/EsunnyTap.Demo/nuget.config
+++ b/tests/EsunnyTap.Demo/nuget.config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <!--To inherit the global NuGet package sources remove the <clear/> line below -->    
-    <add key="local" value="../../src/EsunnyTap.Net/bin/Release" />
+    <add key="local" value="../../src/EsunnyTap.Net/bin/Debug" />
   </packageSources>
 </configuration>
