set *.h file visible to false

--- a/src/EsunnyTap.Net/EsunnyTap.Net.csproj
+++ b/src/EsunnyTap.Net/EsunnyTap.Net.csproj
@@ -28,6 +28,7 @@
             <PackagePath>build\%(RecursiveDir)%(FileName)%(Extension)</PackagePath>
         </Content>
         <Content Include="../EsunnyTapApi/include/*.h">
+            <Visible>false</Visible>
             <Pack>true</Pack>
             <PackagePath>include\%(FileName)%(Extension)</PackagePath>
         </Content>
